refactor api convention
