# controller/student/student.go
@@ -26,7 +26,7 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{array} model.Student
-//	@Router			/student/list [get]
+//	@Router			/student/ [get]
 func ListStudent(g *gin.Context) {
 	var students []model.Student
 
@@ -87,6 +87,82 @@ func ListStudent(g *gin.Context) {
 	g.JSON(http.StatusOK, students)
 }
 
+// @BasePath	/api/v1/
+//
+// Student godoc
+//
+//	@Summary
+//	@Schemes
+//	@Description	Get student by ID
+//	@Tags			Student
+//	@Accept			json
+//
+//	@Param			student_id		path	string	true	"Student ID"
+//
+//	@Produce		json
+//	@Success		200	{object} model.Student
+//	@Router			/student/{student_id} [get]
+func GetStudent(g *gin.Context) {
+	studentID := g.Param("student_id")
+	if studentID == "" {
+		g.JSON(http.StatusBadRequest, gin.H{"error": "Student ID is required"})
+		return
+	}
+
+	query := fmt.Sprintf(`
+		{
+			"query": {
+				"match": {
+					"student_id": "%s"
+				}
+			}
+		}`, studentID)
+	res, err := main.ElasticClient.Search(
+		main.ElasticClient.Search.WithIndex(constraint.IndexNameOfStudent),
+		main.ElasticClient.Search.WithBody(strings.NewReader(query)),
+	)
+	if err != nil {
+		g.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	defer res.Body.Close()
+
+	// Check if the response was successful (HTTP status 200)
+	if res.IsError() {
+		g.JSON(res.StatusCode, gin.H{"error": res.Status()})
+		return
+	}
+
+	// Decode the response body to get the student
+	var result map[string]interface{}
+	if err := json.NewDecoder(res.Body).Decode(&result); err != nil {
+		g.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	hits := result["hits"].(map[string]interface{})["hits"].([]interface{})
+	if len(hits) == 0 {
+		g.JSON(http.StatusBadRequest, gin.H{"error": "Student not found"})
+		return
+	}
+
+	// Extract the first hit
+	source := hits[0].(map[string]interface{})["_source"].(map[string]interface{})
+
+	// Create a Student instance
+	student := model.Student{
+		StudentID:   source["student_id"].(string),
+		StudentName: source["student_name"].(string),
+		YearStarted: int(source["year_started"].(float64)),
+		// Add other fields as needed
+	}
+
+	// Return the student
+	g.JSON(http.StatusOK, student)
+}
+
+
+
 //	@BasePath	/api/v1/
 //
 // Student godoc
@@ -101,7 +177,7 @@ func ListStudent(g *gin.Context) {
 //
 //	@Produce		json
 //	@Success		200	{string} string "Student created successfully"
-//	@Router			/student/create-student [post]
+//	@Router			/student/ [post]
 func CreateStudent(g *gin.Context) {
 	// get body of request
 	data, _ := g.GetRawData()
@@ -124,7 +200,7 @@ func CreateStudent(g *gin.Context) {
 //
 //	@Summary
 //	@Schemes
-//	@Description	Delete a student
+//	@Description	Delete student by ID
 //	@Tags			Student
 //	@Accept			json
 //
@@ -132,7 +208,7 @@ func CreateStudent(g *gin.Context) {
 //
 //	@Produce		json
 //	@Success		200	{string} string "Student deleted successfully"
-//	@Router			/student/delete-student/{student_id} [delete]
+//	@Router			/student/{student_id} [delete]
 func DeleteStudent(g *gin.Context) {
 	studentID := g.Param("student_id")
 	if studentID == "" {
@@ -201,7 +277,7 @@ func DeleteStudent(g *gin.Context) {
 //
 //	@Summary
 //	@Schemes
-//	@Description	Update a student
+//	@Description	Update student by ID
 //	@Tags			Student
 //	@Accept			json
 //
@@ -210,7 +286,7 @@ func DeleteStudent(g *gin.Context) {
 //
 //	@Produce		json
 //	@Success		200	{string} string "Student updated successfully"
-//	@Router			/student/update-student/{student_id} [put]
+//	@Router			/student/{student_id} [put]
 func UpdateStudent(g *gin.Context) {
 	studentID := g.Param("student_id")
 	if studentID == "" {
