# docs/swagger.yaml
@@ -41,7 +41,22 @@ paths:
             type: array
       tags:
       - Lecturer
-  /student/create-student:
+  /student/:
+    get:
+      consumes:
+      - application/json
+      description: Get all students
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Student'
+            type: array
+      tags:
+      - Student
     post:
       consumes:
       - application/json
@@ -62,7 +77,7 @@ paths:
             type: string
       tags:
       - Student
-  /student/delete-student/{student_id}:
+  /student/{student_id}:
     delete:
       consumes:
       - application/json
@@ -82,23 +97,25 @@ paths:
             type: string
       tags:
       - Student
-  /student/list:
     get:
       consumes:
       - application/json
-      description: Get all students
+      description: Get a student
+      parameters:
+      - description: Student ID
+        in: path
+        name: student_id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/model.Student'
-            type: array
+            $ref: '#/definitions/model.Student'
       tags:
       - Student
-  /student/update-student/{student_id}:
     put:
       consumes:
       - application/json
